# E-Voting-System

document/: Deployment Manual.docx  Technical Manual.docx  table_create.sql
source code/Evoting-Algorithm-Set/: CMakeCache.txt  CMakeLists.txt
source code/Evoting-Algorithm-Set/src/: shamir.js  shamir_secret_share.cpp
source code/Evoting-Algorithm-Set/src/user/: CTallying.hpp  HV.hpp  Systemp.hpp  Tallying.hpp  Voter.hpp  tool1.hpp  tool2.hpp  user_alg.hpp  user_alg_test.cpp
source code/Evoting-Auth-Server/: package.json  server.js
source code/Evoting-Auth-Server/app/: mail_sender.js  req_sender.js  tool.js
source code/Evoting-Auth-Server/config/: common_var.js  database.js  tally_server_config.js
source code/Evoting-Auth-Server/test/: interface_tester.js
source code/Evoting-CA-Server/: package.json  server.js
source code/Evoting-CA-Server/app/: ca_routes.js  dao.js  tool.js
source code/Evoting-CA-Server/config/: common_var.js
source code/Evoting-CA-Server/test/: interface_tester.js
source code/Evoting-CA-Server/views/: apply_cert.ejs  download_cert.ejs  index.ejs  result.ejs
source code/Evoting-Client/: CSCI969Server.pro  adddialog.cpp  adddialog.h  adddialog.ui  adduserdialog.cpp  adduserdialog.h  adduserdialog.ui  client_http.hpp  clienthandler.cpp  clienthandler.h  fvdialog.cpp  fvdialog.h  fvdialog.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwin.cpp  mainwin.h  mainwin.ui  modifypwddialog.cpp  modifypwddialog.h  modifypwddialog.ui  pvdialog.cpp  pvdialog.h  pvdialog.ui  readconf.cpp  readconf.h  user.cpp  user.h  usermainwindow.cpp  usermainwindow.h  usermainwindow.ui  uservotedialog.cpp  uservotedialog.h  uservotedialog.ui  vote.cpp  vote.h
source code/Evoting-HV-Server/: package.json  server.js
source code/Evoting-HV-Server/app/: dao.js  hv_routes.js  tool.js
source code/Evoting-Tally-Server/: package.json  server.js
(+56 files in other folders)
